Modified BasicOntology to work with Java 4